# cps-authz-bench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  cps-authz-result.schema.json
examples/failure-corpus/: README.md
examples/fixtures/: analyzer-output-a.json  analyzer-output-b.json  base-graph.json
examples/tools/: always_empty.py  reference_analyzer.py
src/cps_authz_bench/: __init__.py  __main__.py  adapter.py  cli.py  comparison.py  corpus.py  generation.py  json_boundary.py  model.py  mutations.py  oracle.py  reduction.py  results.py  seeds.py
tests/: test_adapter.py  test_cli.py  test_comparison.py  test_corpus.py  test_generation.py  test_integrity.py  test_json_boundaries.py  test_mutations.py  test_oracle_schema.py  test_reduction.py  test_result_integrity.py  test_results.py
