[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "cps-authz-bench"
version = "0.1.0"
description = "Deterministic benchmark toolkit for cyber-physical authorization analyzers"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "cps-authz-bench contributors"}]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
cps-authz-bench = "cps_authz_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
